tests/marouter/errors/false_options/unknown_measure/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Mon Mar 23 12:29:36 2020 by Eclipse SUMO marouter Version v1_5_0+0889-ab4537c2e6
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <additional-files value="input_taz.taz.xml"/>
        <od-matrix-files value="input_od_o.fma"/>
        <weight-attribute value="foo"/>
    </input>

    <output>
        <write-license value="true"/>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <flow id="0" begin="0.00" end="86400.00" number="100" fromTaz="1" toTaz="2" departLane="free" departSpeed="max">
        <routeDistribution>
            <route cost="0.00" probability="100.00000000" edges="beg2left left left2end end"/>
        </routeDistribution>
    </flow>
</routes>
